[OSD-12226] update Development doc with steps to perform tests on local and stage

--- a/docs/2.0-Development.md
+++ b/docs/2.0-Development.md
@@ -79,3 +79,27 @@ make test-ccs
 make test-reuse
 etc.
 ``` 
+
+## 2.4 Using integration-test bootstrap script to run tests
+[Integration test bootstrap script](https://github.com/openshift/aws-account-operator/blob/master/hack/scripts/integration-test-bootstrap.sh) serves as an entrypoint for performing integration tests for different flow profiles. For more information [read here](https://github.com/openshift/aws-account-operator/blob/master/docs/7.0-ProwCIIntegrationTest.md)
+
+### Integration Test Prerequisites
+- Check for core [prerequisites](https://github.com/openshift/aws-account-operator/blob/master/docs/1.1-InstallationPrerequisites.md#11---prerequisites).
+- Environment Variables:-
+    Setup .envrc file in root folder as per [doc](https://github.com/openshift/aws-account-operator/blob/master/docs/1.1-InstallationPrerequisites.md#115-environment-variables),
+    and add below variables to it
+    ```
+    export SUPPORT_JUMP_ROLE=
+    export STS_JUMP_ROLE=
+    export OPERATOR_ACCESS_KEY_ID=
+    export OPERATOR_SECRET_ACCESS_KEY=
+    ```
+- Ensure command line utilities dependencies **jq** & **awscli** are present.
+
+### 2.4.1 Testing on local crc cluster
+- Login to crc cluster as kubeadmin.
+- From root folder of AAO repository run - `make local-ci-entrypoint`
+
+### 2.4.2 Testing on local osd stage cluster
+- Login to osd cluster via backplane
+- From root folder of AAO repository run - `make stage-ci-entrypoint`
