Update required operator-sdk version.
The old documentation still specified v0.16.0 or < 0.18.0, however AAO
can now run with operator-sdk v1.

--- a/docs/1.1-InstallationPrerequisites.md
+++ b/docs/1.1-InstallationPrerequisites.md
@@ -6,7 +6,7 @@ Please ensure you have the following installed, or configured, on your machine b
 * [Golang](https://golang.org/doc/install)
 * [aws-cli](https://aws.amazon.com/cli/)
 * Typically you'll want to use [CRC](https://github.com/code-ready/crc/) for local development, though it's fine if you're running OpenShift another way.
-* You need to have [the operator-sdk binary](https://github.com/operator-framework/operator-sdk/releases) in your `$PATH` < v0.18.
+* You need to have [the operator-sdk binary](https://github.com/operator-framework/operator-sdk/releases) in your `$PATH` > v1.0.
 
 ### 1.1.1 - IAM User and Secret
 
