Update docs outlining the responsibilities of federated role and accountaccess controllers

--- a/docs/3.4-AWSFederatedRole.md
+++ b/docs/3.4-AWSFederatedRole.md
@@ -42,6 +42,7 @@ The `AWSFederatedRole` controller is triggered when an [`AWSFederatedRole`](http
 3. Setting the status to `Valid` or `Failed`.
 4. If the status is `Valid` or `Failed`, stop all reconciling.
 5. If an `AWSFederatedRole` is deleted, cleaning up any instances of the Role in AWS by cleaning up any `AWSFederatedAccountAccesses` using the `AWSFederatedRole`.
+6. If an `AWSFederatedRole` is updated, triggering an update for any `AWSFederatedAccountAccess` instances of that role. 
 
 #### Constants and Globals
 
