--- a/docs/3.5-AWSFederatedAccountAccess.md
+++ b/docs/3.5-AWSFederatedAccountAccess.md
@@ -28,6 +28,7 @@ The `AWSFederatedAccountAccess` controller is triggered when an `AccountClaim` i
 3. Creates a unique AWS `Role` in the AWS containing the OSD cluster using the `AWSFederatedRole` definition.
 4. Creates a unique AWS `Policy` if the `AWSFederatedRole` has `awsCustomPolicy` defined and attaches it to the Role.
 5. Attaches any specified AWS Managed Policies to the `Role`.
+6. Keeps the AWS `Policy` in sync with the backing `AWSFederatedRole`.
 
 #### Constants and Globals
 
