[OSD-19291] update service quota documentation

--- a/docs/8.0-ServiceQuotas.md
+++ b/docs/8.0-ServiceQuotas.md
@@ -102,6 +102,11 @@ status:
         status: TODO
         value: 750
 ```
+## How to add support for additional service quotas?
+#### Step 1: Define Service and Quota Codes
+In `account_types.go` you add the quota code if it's not already supported. Below is a list of supported service quotas with their respective codes: [https://github.com/openshift/aws-account-operator/blob/master/api/v1alpha1/account_types.go#L67-L74]  Additionally, in the same file, you must also define the service code for the supported service quota services: [https://github.com/openshift/aws-account-operator/blob/master/api/v1alpha1/account_types.go#L78-L82]  
+#### Step 2: Update Supported Service Map
+In the `getServiceCode` function, extend the servicesMap by adding additional mappings for the new quota codes you've introduced. Ensure that each quotaCode is associated with the correct service code, enabling the function to provide accurate service code lookups for the supported service quotas.: [https://github.com/openshift/aws-account-operator/blob/master/controllers/account/service_quota.go#L93-L106]  
 
 ## Batch, batch, batch
 AWS has a maximum limit of 20 Service Quota requests in flight per account at a given time, if you surpass this threshold there is a chance they will blanket deny all in-flight and subsequent requests, which forces us to put the account into a failed state. So avoid this, we batch our requests and apply a limit of 20 in-flight requests - [link to code](https://github.com/openshift/aws-account-operator/blob/7eaa90bb66060cc046a4e37e4f3052ed8a234395/controllers/account/account_controller.go#L549-L581). To aid in quickly getting the different service quotas by their current state, we wrote (this helper function)[https://github.com/openshift/aws-account-operator/blob/7eaa90bb66060cc046a4e37e4f3052ed8a234395/api/v1alpha1/account_types.go#L228-L249]. Once we have our batch of service quotas to request, we need to assume role into the correct region and make the request to AWS. All of the logic around the actual Service Quota request is handled (here in the HandleServiceQuotaRequests function)[https://github.com/openshift/aws-account-operator/blob/7eaa90bb66060cc046a4e37e4f3052ed8a234395/controllers/account/service_quota.go#L19-L91]. In `HandleServiceQuotaRequests`, we first determine if the service quota request is even needed, if not, we don't want to overload AWS. If it is needed, we check to see if we've already requested this service quota in the past, depending on what AWS returns [we update accordingly](https://github.com/openshift/aws-account-operator/blob/7eaa90bb66060cc046a4e37e4f3052ed8a234395/controllers/account/service_quota.go#L49-L81).
