[OSD-19724] Fix typo

--- a/docs/8.0-ServiceQuotas.md
+++ b/docs/8.0-ServiceQuotas.md
@@ -104,9 +104,9 @@ status:
 ```
 
 ## How to update service quotas for AccountPool owned accounts?
-Begin by updating the AAO ConfigMap and then restarting the `aws-account-operator` pod. Upon the update, the `accountpool_validation_controller.go` will parse the modified AAO ConfigMap using the `GetServiceQuotasFromAccountPool` function (view code snippet: [https://github.com/openshift/aws-account-operator/blob/4af362e874f99454c7b69166588c4536728bbfc5/pkg/utils/utils.go#L116-L165])
+Begin by updating the AAO ConfigMap and then restarting the `aws-account-operator` pod. Upon the update, the `accountpool_validation_controller.go` will parse the modified AAO ConfigMap using the `GetServiceQuotasFromAccountPool` function: [https://github.com/openshift/aws-account-operator/blob/4af362e874f99454c7b69166588c4536728bbfc5/pkg/utils/utils.go#L116-L165]
 
-Subsequently, within the `accountpool_validation_controller.go`, all accounts associated with an accountpool will be iterated over. It will inspect the `account.Spec.RegionalServiceQuotas` for any discrepancies compared to the ConfigMap, updating the spec accordingly (view code snippet: [https://github.com/openshift/aws-account-operator/blob/91d7d76294ebd2d9e6da512b0ed2fd7d7cf759b2/controllers/validation/accountpool_validation_controller.go#L126-L182]).
+Subsequently, within the `accountpool_validation_controller.go`, all accounts associated with an accountpool will be iterated over. It will inspect the `account.Spec.RegionalServiceQuotas` for any discrepancies compared to the ConfigMap, updating the spec accordingly: [https://github.com/openshift/aws-account-operator/blob/91d7d76294ebd2d9e6da512b0ed2fd7d7cf759b2/controllers/validation/accountpool_validation_controller.go#L126-L182]
 
 The updated account spec will then trigger the `account_validation_controller.go`, where the handling of service quota requests will occur [link to code](https://github.com/openshift/aws-account-operator/blob/91d7d76294ebd2d9e6da512b0ed2fd7d7cf759b2/controllers/validation/account_validation_controller.go#L457-L530)
 
