--- a/docs/9.0-Opt-In-Regions.md
+++ b/docs/9.0-Opt-In-Regions.md
@@ -4,8 +4,8 @@ Content:
 
 - [9.0 Opt-In Regions](#90-opt-in-regions)
   - [Where are Opt-In Regionss defined?](#where-are-opt-in-regions-defined)
-  - [How are Service Quotas applied to an AccountPool?](#how-are-service-quotas-applied-to-an-accountpool)
-  - [So our new Account has service quotas defined, now what?](#so-our-new-account-has-service-quotas-defined-now-what)
+  - [So our new Account has AWS opted-in regions defined, now what?](#so-our-new-account-has-aws-opted-in-regions-defined-now-what)
+  - [How to enable opted-in regions for existing ready accounts?](#how-to-enable-opted-in-regions-for-existing-ready-accounts)
   - [Batch, batch, batch](#batch-batch-batch)
 
 ## Where are Opt-In Regions defined?
@@ -40,13 +40,13 @@ status:
     ap-southeast-4:
       status: ENABLING
     eu-south-2:
-      status: ENABLING
-
+      status: MANUAL_ACTION
 ```
+When an OptIn region's status is `MANUAL_ACTION`, it means the region was not able to be enabled through the AWS API because the OrganizationAccountAccessRole had insufficient permissions.
 
 ## How to enable opted-in regions for existing ready accounts?
-Begin by updating the AAO ConfigMap and then restarting the `aws-account-operator` pod. Upon the update, the `account_validation_controller.go` will iterate over all Ready accounts and verify that regions specified in the ConfigMap are enabled for account using the `ValidateOptInRegions` function: [] #TODO
+Begin by updating the AAO ConfigMap and then restarting the `aws-account-operator` pod. Upon the update, the `account_validation_controller.go` will iterate over all Ready accounts and verify that regions specified in the ConfigMap are enabled for non-ccs accounts using the `ValidateOptInRegions` function: [https://github.com/openshift/aws-account-operator/blob/941b949410b19d812e79b21e185889afdaa8a84f/controllers/validation/account_validation_controller.go#L535-L608]
 
 ## Batch, batch, batch
-AWS imposes a maximum limit of 6 regions that can be concurrently enabled on a given account and a maximum limit of 9 accounts that can enable regions simultaneously. To circumvent these limits imposed by AWS, we batch the enablement requests. [Here](link to code) is the link to the code.
+AWS imposes a maximum limit of 6 regions that can be concurrently enabled on a given account and a maximum limit of 9 accounts that can enable regions simultaneously. To circumvent these limits imposed by AWS, we batch the enablement requests. [link to code](https://github.com/openshift/aws-account-operator/blob/941b949410b19d812e79b21e185889afdaa8a84f/controllers/account/region_enablement.go#L92-L121) is the link to the code.
 
